--- a/init-packages.org
+++ b/init-packages.org
@@ -29,7 +29,7 @@
 #+END_SRC
 
 
-* hide unwanted mode information from mode line 
+* hide unwanted mode information from mode line
 
 [[https://github.com/myrjola/diminish.el][diminish]] [[https://melpa.org/#/diminish][MELPA]]
 
@@ -61,8 +61,11 @@
 #+BEGIN_SRC emacs-lisp
 (use-package avy
   :ensure t
-  :bind ("C-s" . avy-goto-char-timer))
+  :bind ("C-c j" . avy-goto-char-timer))
 #+END_SRC
+
+#+RESULTS:
+: avy-goto-char-timer
 
 
 * expand region based on context
@@ -82,6 +85,22 @@
 
 #+BEGIN_SRC emacs-lisp
 (use-package magit
+  :ensure t)
+#+END_SRC
+
+
+* snippets
+
+[[https://github.com/joaotavora/yasnippet][yasnippet]] [[https://melpa.org/#/yasnippet][MELPA]] [[https://github.com/AndreaCrotti/yasnippet-snippets][yasnippet-snippets]] [[https://melpa.org/#/yasnippet-snippets][MELPA]]
+
+#+BEGIN_SRC emacs-lisp
+(use-package yasnippet
+  :ensure t
+  :diminish yas-minor-mode
+  :config
+  (yas-global-mode 1))
+
+(use-package yasnippet-snippets
   :ensure t)
 #+END_SRC
 
