--- a/init-config.org
+++ b/init-config.org
@@ -5,3 +5,12 @@
   (setq confirm-kill-emacs #'y-or-n-p)
 #+END_SRC
 
+* font
+
+Matthew Butterick's [[https://mbtype.com/fonts/triplicate/][Triplicate]] font.  Also see online text [[https://practicaltypography.com/][Practical Typography]].
+
+#+BEGIN_SRC emacs-lisp
+  (when (member "Triplicate T4c" (font-family-list))
+    (set-face-attribute 'default nil :font "Triplicate T4c"))
+  (set-face-attribute 'default nil :height 240)
+#+END_SRC
