--- a/init-config.org
+++ b/init-config.org
@@ -50,10 +50,6 @@ Matthew Butterick's [[https://mbtype.com/fonts/triplicate/][Triplicate]] font.  
   (use-package flyspell
     :ensure t
     :diminish flyspell-mode
-    :init
-    (add-hook 'org-mode-hook
-            (lambda ()
-              (flyspell-mode 1)))
 
     :config
     (setq ispell-program-name "aspell"
@@ -63,10 +59,6 @@ Matthew Butterick's [[https://mbtype.com/fonts/triplicate/][Triplicate]] font.  
           ispell-list-command "--list"))
 #+END_SRC
 
-
-
-
-
 * ElDoc
 
 [[https://www.emacswiki.org/emacs/ElDoc][ElDoc]]
@@ -74,4 +66,27 @@ Matthew Butterick's [[https://mbtype.com/fonts/triplicate/][Triplicate]] font.  
 #+BEGIN_SRC emacs-lisp
   (use-package eldoc
     :diminish eldoc-mode)
+#+END_SRC
+
+* New scratch buffers
+
+Functions come from Harry Schwartz.  Most workflows start with one of these.
+
+#+BEGIN_SRC emacs-lisp
+  (defun js/new-buffer-checked ()
+      "Create and switch to a temporary scratch org buffer with a random
+       name.  Include spell checking."
+      (interactive)
+      (switch-to-buffer (make-temp-name "scratch-"))
+      (org-mode)
+      (flyspell-mode))
+
+  (global-set-key (kbd "C-c f") 'js/new-buffer-checked)
+
+  (defun js/new-scratch-buffer ()
+      "Create and switch to a temporary scratch org buffer with a random
+       name."
+      (interactive)
+      (switch-to-buffer (make-temp-name "scratch-"))
+      (org-mode))
 #+END_SRC
