--- a/init-config.org
+++ b/init-config.org
@@ -68,7 +68,7 @@ Matthew Butterick's [[https://mbtype.com/fonts/triplicate/][Triplicate]] font.  
     :diminish eldoc-mode)
 #+END_SRC
 
-* New scratch buffers
+* new scratch buffers
 
 Functions come from Harry Schwartz.  Most workflows start with one of these.
 
@@ -89,4 +89,32 @@ Functions come from Harry Schwartz.  Most workflows start with one of these.
       (interactive)
       (switch-to-buffer (make-temp-name "scratch-"))
       (org-mode))
+#+END_SRC
+
+* copy a date from the calendar into the kill ring
+
+[[https://emacs.stackexchange.com/questions/41978/how-to-retrieve-the-date-under-the-cursor-in-emacs-calendar-as-the-format-day-mo][Stack Overflow]]
+
+#+BEGIN_SRC emacs-lisp
+  (defcustom calendar-copy-as-kill-format "%Y-%m-%d"
+    "Format string for formatting calendar dates with `format-time-string'."
+    :type 'string
+    :group 'calendar)
+
+  (defun calendar-copy-as-kill ()
+    "Copy date at point as kill if region is not active.
+  Delegate to `kill-ring-save' otherwise."
+    (interactive)
+    (if (use-region-p)
+        (call-interactively #'kill-ring-save)
+      (let ((date (calendar-cursor-to-date)))
+        (when date
+          (setq date (encode-time 0 0 0 (nth 1 date) (nth 0 date) (nth 2 date)))
+          (kill-new (format-time-string calendar-copy-as-kill-format date))))))
+
+  (defun my-calendar-mode-hook-fun ()
+    "Let \[kill-ring-save] copy the date at point if region is not active."
+    (local-set-key [remap kill-ring-save] #'calendar-copy-as-kill))
+
+  (add-hook 'calendar-mode-hook #'my-calendar-mode-hook-fun)
 #+END_SRC
