Add visual line mode to nsb

--- a/config.org
+++ b/config.org
@@ -46,6 +46,7 @@
   (setq confirm-kill-emacs #'y-or-n-p)
   (setq inhibit-startup-screen t)
   (setq initial-scratch-message nil)
+  (setq visual-line-fringe-indicators t)
 #+END_SRC
 
 * display
@@ -120,7 +121,8 @@ Functions come from Harry Schwartz.  Most workflows start with one of these.
       (interactive)
       (switch-to-buffer (make-temp-name "scratch-"))
       (org-mode)
-      (flyspell-mode))
+      (flyspell-mode)
+      (visual-line-mode))
 
   (global-set-key (kbd "C-c f") 'js/new-buffer-checked)
 
