--- a/config.org
+++ b/config.org
@@ -351,7 +351,7 @@ Functions come from Harry Schwartz.  Most workflows start with one of these.
 
 [[https://github.com/magit/magit][magit]] [[https://melpa.org/#/magit][MELPA]]
 
-#+BEGIN_SRC emacs-lisp
+#+BEGIN_SRC emacs-lisp :tangle no
   (use-package magit
     :ensure t)
 #+END_SRC
