--- a/config.org
+++ b/config.org
@@ -218,6 +218,7 @@ Functions come from Harry Schwartz.  Most workflows start with one of these.
 
 #+BEGIN_SRC emacs-lisp
   (recentf-mode t)
+  (setq recentf-max-saved-items 50)
   (global-set-key (kbd "C-x C-r") 'recentf-open-files)
 #+END_SRC
 
