--- a/config.org
+++ b/config.org
@@ -433,18 +433,20 @@ Mike Zamansky [[https://github.com/zamansky/using-emacs/blob/master/myinit.org][
 
 #+BEGIN_SRC emacs-lisp
   (global-set-key (kbd "C-x C-b") 'ibuffer)
-    (setq ibuffer-saved-filter-groups
-          (quote (("default"
-                   ("dired" (mode . dired-mode))
-                   ("org" (mode . org-mode))
-                   ("python" (mode . python-mode))
-                   ("elisp" (mode . emacs-lisp-mode))
-                   ("html" (mode . mhtml-mode))))))
-    (add-hook 'ibuffer-mode-hook
-              (lambda ()
-                (ibuffer-auto-mode 1)
-                (ibuffer-switch-to-saved-filter-groups "default")))
-    (setq ibuffer-show-empty-filter-groups nil)
+  (setq ibuffer-saved-filter-groups
+        (quote (("default"
+                 ("dired" (mode . dired-mode))
+                 ("org" (mode . org-mode))
+                 ("python" (mode . python-mode))
+                 ("elisp" (mode . emacs-lisp-mode))
+                 ("html" (mode . mhtml-mode))
+                 ("javascript" (mode . js-mode))
+                 ("exwm" (mode . exwm-mode))))))
+  (add-hook 'ibuffer-mode-hook
+            (lambda ()
+              (ibuffer-auto-mode 1)
+              (ibuffer-switch-to-saved-filter-groups "default")))
+  (setq ibuffer-show-empty-filter-groups nil)
 #+END_SRC
 
 * smartparens
