--- a/config.org
+++ b/config.org
@@ -480,7 +480,10 @@ Instructions on disabling inch marks in org mode are [[https://github.com/Fuco1/
     :ensure t
     :diminish counsel-mode
     :bind
-    ("M-y" . counsel-yank-pop))
+    ("M-y" . counsel-yank-pop)
+    ("M-x" . counsel-M-x)
+    ("C-x C-f" . counsel-find-file)
+    ("C-x b" . counsel-ibuffer))
 
   (use-package ivy
     :ensure t
