Add elisp source block org template

--- a/config.org
+++ b/config.org
@@ -330,6 +330,9 @@ I don't want to confirm every time babel evaluates.
 
   (global-set-key (kbd "C-c c") 'org-capture)
 
+  (add-to-list 'org-structure-template-alist
+               '("E" "#+BEGIN_SRC emacs-lisp\n?\n#+END_SRC"))
+
 #+END_SRC
 
 * navigation within a file
