--- a/exwm.org
+++ b/exwm.org
@@ -61,3 +61,8 @@ Thank you [[https://github.com/daedreth/UncleDavesEmacs][Uncle Dave]] for this. 
   (use-package magit
     :ensure t)
 #+END_SRC
+
+* display time in mode line
+#+BEGIN_SRC emacs-lisp
+  (display-time-mode 1)
+#+END_SRC
